<resources>
    <string name="app_name" translatable="false">DamiKitz</string>
    <string name="content_description" translatable="false">image</string>

    <!-- Error Messages -->
    <string name="error_message_enter_first_name">Enter your first name.</string>
    <string name="error_message_enter_last_name">Enter your last name.</string>
    <string name="error_message_enter_email">Enter your email address.</string>
    <string name="error_message_enter_password">Enter your password.</string>

    <!-- Authentication -->
    <string name="login_text">Log In</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_label">Forgot Your Password?</string>
    <string name="login_button_label">Log In</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">Create account</string>

    <!-- Registration -->
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button_label">Register</string>
    <string name="login"><u>Log In</u></string>
    <string name="existing_user">Already have an account?</string>

    <!-- General -->
    <string name="please_wait">Please Wait...</string>

    <!-- Forgot Password -->
    <string name="forgot_password_text">Forgot Your Password?</string>
    <string name="submit_button_label">Send Email</string>
    <string name="forgot_password_description">Enter your email address to reset your password.</string>

    <!-- Profile -->
    <string name="title_complete_profile">Complete Your Profile</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="save_button_label">Save</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="edit_label">Edit</string>
    <string name="addresses_label">Addresses</string>
    <string name="logout_button_label">Logout</string>

    <!-- Product Management -->
    <string name="edit_profile">Edit Profile</string>
    <string name="add_product">Add Product</string>
    <string name="send_product">Send Product</string>
    <string name="title_add_product">Add a Product</string>
    <string name="product_title_hint">Product Title</string>
    <string name="product_price_hint">Product Price ($)</string>
    <string name="product_description_hint">Product Description</string>
    <string name="product_quantity_hint">Product Quantity</string>

    <!-- Permissions -->
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_needed_for_gallery">Permission Needed For Gallery</string>
    <string name="give_permission">Give Permission</string>

    <!-- Product Errors and Messages -->
    <string name="error_message_select_product_image">Select a product image.</string>
    <string name="error_message_enter_product_title">Enter the product title.</string>
    <string name="error_message_enter_product_price">Enter the product price.</string>
    <string name="error_message_enter_product_description">Enter the product description.</string>
    <string name="error_message_enter_product_quantity">Enter the product quantity.</string>
    <string name="product_uploaded_successfully_message">Product was uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <!-- Product Deletion -->
    <string name="blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="delete_product_title">Delete Product</string>
    <string name="are_you_sure_want_to_delete_product">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="product_delete_success_message">Deleted successfully.</string>

    <!-- Product Details -->
    <string name="title_product_details">Product Details</string>
    <string name="product_description_label">Product Description</string>
    <string name="product_details_stock_quantity_label">Stock Quantity</string>
    <string name="update_product_btn">Update Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="product_updated_successfully">Updated Successfully</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_cart_success">Added to the cart.</string>
    <string name="go_to_cart">Go to Cart</string>

    <!-- Address Management -->
    <string name="full_name_hint">Full Name</string>
    <string name="title_address_list">Address List</string>
    <string name="add_address_label">Add Address</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="title_add_address">Add Address</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="delivery_instructions_hint">Additional Note</string>
    <string name="home_label">Home</string>
    <string name="address_hint">Address</string>
    <string name="hint_other_details">Other Details</string>
    <string name="office_label">Office</string>
    <string name="other_label">Other</string>
    <string name="submit_address">Submit Address</string>
    <string name="error_message_please_enter_full_name">Please enter your full name.</string>
    <string name="error_message_please_enter_phone_number">Please enter your phone number.</string>
    <string name="error_message_please_enter_address">Please enter your address.</string>
    <string name="error_message_please_enter_zip_code">Please enter your zip code.</string>
    <string name="error_message_please_enter_other_details">Please enter other details.</string>
    <string name="update_button_label">Update</string>
    <string name="address_updated_successfully_message">Your address was updated successfully.</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="error_address_unsuccessful">Your address has been added successfully.</string>
    <string name="error_address_deleted_unsuccessful">Your address was deleted successfully.</string>
    <string name="title_select_address">Select Address</string>
    <string name="selected_address">Selected Address: </string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>

    <!-- Cart -->
    <string name="title_my_cart">My Cart</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="no_cart_item_found">No items found in the cart!</string>
    <string name="checkout_button_label">Checkout</string>
    <string name="total_amount_label">Total Amount</string>
    <string name="shipping_charge_label">Shipping Charge</string>
    <string name="action_cart">My Cart</string>
    <string name="out_of_stock_label">Out of Stock</string>
    <string name="message_item_removed_successfully">Item removed successfully.</string>
    <string name="message_for_available_stock">Available stock is %1$s! You cannot add more than the stock quantity.</string>

    <!-- Checkout -->
    <string name="title_checkout">Checkout</string>
    <string name="checkout_label_product_items">Product Items</string>
    <string name="checkout_label_selected_address">Selected Address</string>
    <string name="checkout_label_items_receipt">Items Receipt</string>
    <string name="label_cash_on_delivery">Cash (Delivery)</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="button_label_place_order">Place Order</string>
    <string name="your_order_has_placed_success">Your Order Has Been Placed Successfully.</string>

    <!-- Navigation -->
    <string name="nav_bottom_title_buy">Shop</string>
    <string name="nav_bottom_title_sell">Sell</string>
    <string name="nav_bottom_title_orders">Orders</string>
    <string name="no_orders_placed_yet">No orders have been placed yet!</string>

    <!-- Order Details -->
    <string name="title_order_details">My Order Details</string>
    <string name="order_details_label_order_id">Order ID</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_label_order_status">Order Status</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_details_label_order_date">Order Date</string>
    <string name="order_details_label_shipping_address">Shipping Address</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_cargo">Cargo</string>

    <!-- Sold Products -->
    <string name="title_sold_products">Sold Products</string>
    <string name="sold_products_toolbar_title">SOLD PRODUCTS</string>
    <string name="sell_product_title">Sell Products</string>
    <string name="no_products_sold_out_yet">No products have been sold out yet!</string>
    <string name="explore_buy_title">DamiKitz</string>
    <string name="orders_title">Your Orders</string>
    <string name="title_sold_product_details">Sold Product Details</string>

    <!-- Miscellaneous -->
    <string name="login_failed_try_again">Login Failed, Please Try Again.</string>
    <string name="dont_leave_entries_blank">Do not leave the fields blank.</string>
    <string name="welcome_user">Welcome, </string>
</resources>