<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/screen_background" />

        <ImageView
            android:layout_width="464dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:tint="@color/colorWhite" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/login_text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_address_hint"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <EditText
            android:id="@+id/edited_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edited_padding"
            android:textColor="@color/colorText"
            android:textSize="@dimen/edited_textSize"
            tools:text="abc@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <EditText
            android:id="@+id/edited_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/edited_padding"
            android:textColor="@color/colorText"
            android:textSize="@dimen/edited_textSize"
            tools:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/forgot_password_label"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/forgot_password_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/login_button_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login">

        <TextView
            android:id="@+id/tv_no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/no_account_text"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/label_text_view_textSize" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/label_text_view_textSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>