<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/app_gradient_color_background"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edited_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/edited_padding"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/edited_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name">

                <EditText
                    android:id="@+id/edited_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/edited_padding"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/edited_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email_address_hint"
                android:textColorHint="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name">

                <EditText
                    android:id="@+id/edited_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edited_padding"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/edited_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <EditText
                    android:id="@+id/edited_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/edited_padding"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/edited_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/confirm_password_hint"
                android:textColorHint="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password">

                <EditText
                    android:id="@+id/edited_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/edited_padding"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/edited_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_confirm_password">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="false" />

                <TextView
                    android:id="@+id/tv_terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/txt_terms_and_condition_textSize" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:text="@string/register_button_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_terms_and_condition" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_register">

                <TextView
                    android:id="@+id/tv_existing_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/existing_user"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/label_text_view_textSize" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/login"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/label_text_view_textSize" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
